# awesome-vibecoding-cn

./: .gitignore  .lycheeignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: broken-link.yml  resource.yml
.github/workflows/: quality.yml
.superpowers/sdd/: final-fix-report.md
data/: resources.yaml
docs/: content-guidelines.md  maintenance.md  sources.md
docs/superpowers/plans/: 2026-07-13-awesome-vibecoding-cn-v1.md
docs/superpowers/specs/: 2026-07-13-awesome-vibecoding-cn-design.md
scripts/: __init__.py  build_readme.py  resource_model.py  validate.py
tests/: test_readme.py  test_resources.py
